# sobolev_alignment

./: ._README.md  ._pyproject.toml  .cruft.json  .flake8  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yaml  LICENSE  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej  pytest.ini  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: python-publish.yml  release.yaml  sync.yaml  test.yaml  test.yaml.rej
docs/: api.md  conf.py  conf.py.rej  contributing.md  index.rst  requirements.txt  template_usage.md
docs/_autosummary/: sobolev_alignment.rst
docs/content/: process_data.rst  sobolev_alignment.rst
docs/docs/source/: conf.py
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/.doctrees/: environment.pickle  index.doctree
docs/html/_sources/: index.rst.txt
docs/html/_static/: basic.css  copybutton.css  copybutton.js  copybutton_funcs.js  doctools.js  documentation_options.js  jquery-3.5.1.js  jquery-3.6.0.js  jquery.js  language_data.js  mystnb.4510f1fc1dee50b3e5859aac5469c37c29e427902b24a333a5f9fcb2f0b3ac41.css  pygments.css  sbt-webpack-macros.html  searchtools.js  underscore.js  webpack-macros.html
docs/html/source/: modules.html  sobolev_alignment.html
docs/notebooks/: example.ipynb
docs/source/: .buildinfo  conf.html  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/.doctrees/: conf.doctree  environment.pickle  index.doctree
sobolev_alignment/: ._feature_analysis.py  ._krr_model_selection.py  ._sobolev_alignment.py  __init__.py  _scvi_default_params.py  example.py  feature_analysis.py  generate_artificial_sample.py  interpolated_features.py  kernel_operations.py  krr_approx.py  krr_model_selection.py  multi_krr_approx.py  scvi_model_search.py  sobolev_alignment.py
src/sobolev_alignment/: __init__.py
tests/: test_basic.py  test_krr_approx.py  test_sobolev_alignment.py
tutorials/: ._process_data.ipynb  process_data.ipynb  tutorial_simple.ipynb
(+18 files in other folders)
